--- a/src/style.css
+++ b/src/style.css
@@ -152,7 +152,7 @@ h2 {
 /* search section */
 
 #search {
-  background-image: url(../IMG/search_section.png);
+  background-image: url(../IMG/logo/search_section.png);
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
